...
            static let font = UIFont(name: "Roboto-Regular", size: 17) ?? UIFont.systemFont(ofSize: 17)
            static let textColor = UIColor(red: 0.235, green: 0.235, blue: 0.263, alpha: 0.6)
            static let numberOfLines = 0
        }
        enum ReverseTextField {
            static let placeholder = NSAttributedString(
                string: "Text to reverse",
                attributes: [NSAttributedString.Key.foregroundColor: UIColor.lightGray])
            static let font = UIFont(name: "Roboto-Regular", size: 17) ?? UIFont.systemFont(ofSize: 17)
            static let textColor = UIColor(red: 0.235, green: 0.235, blue: 0.263, alpha: 1)
        }
        enum Divider {
            static let inactiveColor = UIColor(red: 0.129, green: 0.129, blue: 0.129, alpha: 0.2).cgColor
...
        }
        enum Result {
            static let font = UIFont(name: "Roboto-Regular", size: 24) ?? UIFont.systemFont(ofSize: 24)
            static let textColor = UIColor(red: 0, green: 0.478, blue: 1, alpha: 1)
        }
        enum ReverseButton {
            static let titleLabelReverse = "Reverse"
            static let titleLabelClear = "Clear"
            static let inactiveBackgroundColor = UIColor(red: 0, green: 0.478, blue: 1, alpha: 0.6).cgColor
            static let activeBackgroundColor = UIColor(red: 0, green: 0.478, blue: 1, alpha: 1).cgColor
            static let cornerRadius: CGFloat = 14
        }
        enum OffSet {
            static let side: CGFloat = 16
...
